--- a/projectIoT/panel/templates/sprinkler/view_sprinklers.html
+++ b/projectIoT/panel/templates/sprinkler/view_sprinklers.html
@@ -52,7 +52,7 @@
                     <thead>
                         <tr>
                             <th>#</th>
-                            <th>códig</th>
+                            <th>Código</th>
                             <th>Descripción</th>
                             <th>Estado</th>
                             <th>Opciones</th>
