Listar Sprinklers en Plan

--- a/projectIoT/panel/templates/plan/view_plans.html
+++ b/projectIoT/panel/templates/plan/view_plans.html
@@ -12,10 +12,9 @@
                 <div class="">
                     <div class="input-group mb-3">
                         <select class="form-select" id="inputGroupSelect01">
-                            <option selected="">Choose...</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
+                            {% for sprinkler in sprinklers %}
+                                <option value="{{sprinkler.id}}">{{sprinkler.codSprinkler}}</option>
+                            {% endfor %}
                         </select>
                         <label class="input-group-text" for="inputGroupSelect01">Aspersor</label>
                     </div>
