--- a/projectIoT/panel/templates/sprinkler/view_sprinklers.html
+++ b/projectIoT/panel/templates/sprinkler/view_sprinklers.html
@@ -10,14 +10,15 @@
             </div>
             <div class="card-content">
                 <div class="card-body">
-                    <form class="form form-horizontal">
+                    <form class="form form-horizontal" method="POST">
+                        {% csrf_token %}
                         <div class="form-body">
                             <div class="row">
                                 <div class="col-md-4">
                                     <label>Codigo Aspersor</label>
                                 </div>
                                 <div class="col-md-8 form-group">
-                                    <input type="text" id="first-name" class="form-control" name="fname"
+                                    <input type="text" id="codSprinkler" class="form-control" name="codSprinkler"
                                         placeholder="Codigo de Aspersor">
                                 </div>
                                 <div class="col-md-4">
@@ -28,7 +29,8 @@
                                 </div>
                                 <div class="form-check form-switch" style="margin-left: 215px;">
 
-                                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" checked="">
+                                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked"
+                                        checked="">
                                     <label class="form-check-label" for="flexSwitchCheckChecked">Estado</label>
                                 </div>
                                 <div class="col-sm-12 d-flex justify-content-end">
