--- a/projectIoT/panel/templates/sprinkler/view_sprinklers.html
+++ b/projectIoT/panel/templates/sprinkler/view_sprinklers.html
@@ -10,7 +10,7 @@
             </div>
             <div class="card-content">
                 <div class="card-body">
-                    <form class="form form-horizontal" method="POST">
+                    <form class="form form-horizontal" method="POST" action="{% url 'list_sprinklers' %}">
                         {% csrf_token %}
                         <div class="form-body">
                             <div class="row">
@@ -18,24 +18,17 @@
                                     <label>Codigo Aspersor</label>
                                 </div>
                                 <div class="col-md-8 form-group">
-                                    <input type="text" id="codSprinkler" class="form-control" name="codSprinkler"
-                                        placeholder="Codigo de Aspersor">
+                                    <input type="text" id="codSprinkler" class="form-control" name="codSprinkler" value="{{form.value | default:''}}">
                                 </div>
                                 <div class="col-md-4">
                                     <label>Descripción</label>
                                 </div>
                                 <div class="col-md-8 form-group">
-                                    <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-                                </div>
-                                <div class="form-check form-switch" style="margin-left: 215px;">
-
-                                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked"
-                                        checked="">
-                                    <label class="form-check-label" for="flexSwitchCheckChecked">Estado</label>
+                                    <textarea class="form-control" id="exampleFormControlTextarea1" name="description" rows="3"></textarea>
                                 </div>
                                 <div class="col-sm-12 d-flex justify-content-end">
-                                    <button type="submit" class="btn btn-primary me-1 mb-1">Guardar</button>
-                                    <button type="reset" class="btn btn-light-secondary me-1 mb-1">Reset</button>
+                                    <input type="submit" class="btn btn-primary me-1 mb-1" value="Guardar">
+                                    <!-- <button type="reset" class="btn btn-light-secondary me-1 mb-1">Reset</button> -->
                                 </div>
                             </div>
                         </div>
@@ -73,9 +66,16 @@
                                 <span class="badge bg-danger">Inactive</span>
                                 {% endif %}
                             </td>
-                            <td colspan="2">
-                                <div class="btn btn-primary me-1 mb-1">Activar</div>
-                                <div class="btn btn-secondary me-1 mb-1">Planificar</div>
+                            <td colspan="3">
+                                <!-- <a class="btn btn-primary me-1 mb-1" role="button">Activar</a> -->
+                                <a class="btn btn-secondary me-1 mb-1" role="button" href="{% url 'list_plans' %}">Planificar</a>
+                                <a class="btn btn-danger me-1 mb-1" href="{% url 'delete_sprinkler' sprinkler.id %}" role="button">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill"
+                                        viewBox="0 0 16 16">
+                                        <path
+                                            d="M11 1.5v1h3.5a.5.5 0 0 1 0 1h-.538l-.853 10.66A2 2 0 0 1 11.115 16h-6.23a2 2 0 0 1-1.994-1.84L2.038 3.5H1.5a.5.5 0 0 1 0-1H5v-1A1.5 1.5 0 0 1 6.5 0h3A1.5 1.5 0 0 1 11 1.5Zm-5 0v1h4v-1a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0-.5.5ZM4.5 5.029l.5 8.5a.5.5 0 1 0 .998-.06l-.5-8.5a.5.5 0 1 0-.998.06Zm6.53-.528a.5.5 0 0 0-.528.47l-.5 8.5a.5.5 0 0 0 .998.058l.5-8.5a.5.5 0 0 0-.47-.528ZM8 4.5a.5.5 0 0 0-.5.5v8.5a.5.5 0 0 0 1 0V5a.5.5 0 0 0-.5-.5Z" />
+                                    </svg>
+                                </a>
                             </td>
                         </tr>
                         {% endfor %}
