--- a/projectIoT/panel/templates/plan/view_plans.html
+++ b/projectIoT/panel/templates/plan/view_plans.html
@@ -51,12 +51,12 @@
                                         </div>
                                         <div class="col-md-8 form-group">
                                             <input type="datetime-local" id="date" class="form-control" name="endTime">
-                                        </div>
+                                        </div>  
                                         <div class="col-md-4">
                                             <label>Aspersor</label>
                                         </div>
                                         <div class="col-md-8 form-group">
-                                            <input type="text" id="sp_id" class="form-control" name="sprinkler_id" disabled>
+                                            <input type="text" id="sp_id" class="form-control" name="sprinkler" readonly>
                                         </div>
                                         <div class="col-sm-12 d-flex justify-content-end">
                                             <input type="submit" class="btn btn-primary me-1 mb-1" value="Guardar">
