--- a/projectIoT/panel/templates/layout.html
+++ b/projectIoT/panel/templates/layout.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" href="{% static 'lib/vendors/perfect-scrollbar/perfect-scrollbar.css' %}">
     <link rel="stylesheet" href="{% static 'lib/vendors/bootstrap-icons/bootstrap-icons.css' %}">
     <link rel="stylesheet" href="{% static 'lib/css/app.css' %}">
+    {% block head %}
+    {% endblock %}
 </head>
 
 <body>
