script de monitor

--- a/projectIoT/panel/templates/plan/view_plans.html
+++ b/projectIoT/panel/templates/plan/view_plans.html
@@ -5,7 +5,7 @@
     <script src="https://unpkg.com/mqtt/dist/mqtt.min.js"></script>
     <script>
         function mostrarValores(humedad) {
-            document.getElementById('monitor').innerHTML += humedad
+            document.getElementById('monitor').innerHTML += `--> ${humedad}\n`
 
         }
 
