correccion de impresion monitor

--- a/projectIoT/panel/templates/plan/view_plans.html
+++ b/projectIoT/panel/templates/plan/view_plans.html
@@ -6,6 +6,7 @@
     <script>
         function mostrarValores(humedad) {
             document.getElementById('monitor').innerHTML += `--> ${humedad}\n`
+            console.log(humedad)
 
         }
 
