correccion de impresion monitor

--- a/projectIoT/panel/templates/plan/view_plans.html
+++ b/projectIoT/panel/templates/plan/view_plans.html
@@ -15,7 +15,7 @@
                 var data = message.toString();
                 var temp = data.split(",");
                 var humedad = temp[0];
-                mostrarValores(humedad);
+                mostrarValores(data);
             }
         }
 
