Modificaciones en el layout

--- a/projectIoT/panel/templates/layout.html
+++ b/projectIoT/panel/templates/layout.html
@@ -18,9 +18,8 @@
     <link rel="stylesheet" href="{% static 'lib/css/app.css' %}">
 </head>
 
-<body>
+<body style="background-color: #D7E6FE">
     <div id="app">
-
         <div id="sidebar" class="active">
             <div class="sidebar-wrapper active">
                 <div class="sidebar-header">
