--- a/projectIoT/panel/templates/sprinkler/view_sprinklers.html
+++ b/projectIoT/panel/templates/sprinkler/view_sprinklers.html
@@ -37,7 +37,9 @@
             </div>
         </div>
     </section>
-    <section class="section col-sm-12 col-lg-7">
+</div>
+<div class="row">
+    <section class="section col">
         <div class="card">
             <div class="card-header">
                 <h4>Lista de Aspersores</h4>
