--- a/projectIoT/panel/templates/sprinkler/view_sprinklers.html
+++ b/projectIoT/panel/templates/sprinkler/view_sprinklers.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="row">
-    <section class="section col-sm-12 col-lg-5">
+    <section class="section col-sm-12 col-lg-6">
         {% if form.errors %}
             {% for field in form %}
                 {% for error in field.errors %}
@@ -35,6 +35,41 @@
                                 </div>
                                 <div class="col-md-8 form-group">
                                     <textarea class="form-control" id="exampleFormControlTextarea1" name="description" rows="3"></textarea>
+                                </div>
+                                <div class="col-sm-12 d-flex justify-content-end">
+                                    <input type="submit" class="btn btn-primary me-1 mb-1" value="Guardar">
+                                    <!-- <button type="reset" class="btn btn-light-secondary me-1 mb-1">Reset</button> -->
+                                </div>
+                            </div>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="section col-sm-12 col-lg-6">
+        <div class="card">
+            <div class="card-header">
+                <h4 class="card-title">Editar Aspersor</h4>
+            </div>
+            <div class="card-content">
+                <div class="card-body">
+                    <form class="form form-horizontal" method="POST" action="{% url 'edit_sprinkler' %}">
+                        {% csrf_token %}
+                        <div class="form-body">
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <label>Codigo Aspersor</label>
+                                </div>
+                                <div class="col-md-8 form-group">
+                                    <input readonly type="hidden" id="editIdSprinkler" class="form-control" name="id">
+                                    <input readonly type="text" id="editCodSprinkler" class="form-control" name="codSprinkler">
+                                </div>
+                                <div class="col-md-4">
+                                    <label>Descripción</label>
+                                </div>
+                                <div class="col-md-8 form-group">
+                                    <textarea class="form-control" id="editDescSprinkler" name="description" rows="3"></textarea>
                                 </div>
                                 <div class="col-sm-12 d-flex justify-content-end">
                                     <input type="submit" class="btn btn-primary me-1 mb-1" value="Guardar">
@@ -82,7 +117,8 @@
                                 <!-- <a class="btn btn-primary me-1 mb-1" role="button">Activar</a> -->
                                 <a class="btn btn-success me-1 mb-1" role="button" href="{% url 'start_sprinkler' sprinkler.id %}">On</a>
                                 <a class="btn btn-danger me-1 mb-1" role="button" href="{% url 'stop_sprinkler' sprinkler.id %}">Off</a>
-                                <a class="btn btn-warning me-1 mb-1" href="{% url 'delete_sprinkler' sprinkler.id %}" role="button">
+                                <a class="btn btn-secondary me-1 mb-1" role="button" href="#" onclick="editarValores('{{sprinkler.id}}','{{sprinkler.codSprinkler}}','{{sprinkler.description}}')"><i class="fa fa-edit"></i></a>
+                                <a class="btn btn-dark me-1 mb-1" href="{% url 'delete_sprinkler' sprinkler.id %}" role="button">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash3-fill"
                                         viewBox="0 0 16 16">
                                         <path
@@ -98,4 +134,13 @@
         </div>
     </section>
 </div>
+<script>
+
+    function editarValores(id,cod,desc) {
+        document.getElementById('editIdSprinkler').value = id
+        document.getElementById('editCodSprinkler').value = cod
+        document.getElementById('editDescSprinkler').innerHTML = desc
+    }
+
+</script>
 {% endblock %}
