--- a/projectIoT/panel/templates/sprinkler/view_sprinklers.html
+++ b/projectIoT/panel/templates/sprinkler/view_sprinklers.html
@@ -16,7 +16,7 @@
         {% endif %}
         <div class="card">
             <div class="card-header">
-                <h4 class="card-title">Formulario Aspersor</h4>
+                <h4 class="card-title">Nuevo Aspersor</h4>
             </div>
             <div class="card-content">
                 <div class="card-body">
