--- a/projectIoT/panel/templates/layout.html
+++ b/projectIoT/panel/templates/layout.html
@@ -49,6 +49,11 @@
                                 <i class="bi bi-grid-fill"></i>
                                 <span>Plan</span>
                             </a>
+                            <br>
+                            <a href="{% url 'logout' %}" class='sidebar-link' style="background-color: #f90202">
+                                <i class="bi bi-grid-fill"></i>
+                                <span>Logout</span>
+                            </a>
                         </li>
 
                     </ul>
