--- a/projectIoT/panel/templates/layout.html
+++ b/projectIoT/panel/templates/layout.html
@@ -50,6 +50,11 @@
                                 <span>Plan</span>
                             </a>
                             <br>
+                            <a href="{% url 'logs' %}" class='sidebar-link'>
+                                <i class="bi bi-grid-fill"></i>
+                                <span>Logs</span>
+                            </a>
+                            <br>
                             <a href="{% url 'logout' %}" class='sidebar-link' style="background-color: #f90202">
                                 <i class="bi bi-grid-fill"></i>
                                 <span>Logout</span>
